Adding single API customisation tests

--- a/app/oas-stub-spring/src/test/resources/schema/test-api.yaml
+++ b/app/oas-stub-spring/src/test/resources/schema/test-api.yaml
@@ -30,7 +30,7 @@ paths:
           description: Created
         400:
           $ref: "#/components/responses/400ErrorResponse"
-  /profile/{id}:
+  /profiles/{id}:
     parameters:
       - $ref: "#/components/parameters/Request-ID"
       - name: id
