Using MongoClient provided by Spring data instead of creating own

--- a/app/oas-stub-spring/src/test/resources/application-hazeldb.yaml
+++ b/app/oas-stub-spring/src/test/resources/application-hazeldb.yaml
@@ -6,9 +6,12 @@ oas:
     hazelcast:
       session-map: session
     mongodb:
-      client:
-        host: ${mongodb.host}
-        port: ${mongodb.port}
       persistent:
         database: database
         collection: persistent
+
+spring:
+  data:
+    mongodb:
+      host: ${mongodb.host}
+      port: ${mongodb.port}
