--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.7.0
         with:
-          arguments: build --scan
+          arguments: build
