--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,7 @@ jobs:
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.7.0
-      - name: Execute Gradle build
-        run: ./gradlew build
+      - name: Build
+        run: ./gradlew build -x test
+      - name: Run tests
+        run: ./gradlew test -i
