Adding JAVA_OPTS to test for Hazelcast

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,11 @@ jobs:
         run: ./gradlew build -x test
       - name: Run tests
         run: ./gradlew test -i
+        env:
+          JAVA_OPTS: |
+            --add-modules java.se
+            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED 
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.management/sun.management=ALL-UNNAMED
+            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
