--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,16 @@
 [versions]
 kotlin = "1.9.0"
 dokka = "1.8.20"
+jackson = "2.15.2"
 servlet-api = "6.0.0"
 swagger-core = "2.2.15"
 junit = "5.9.3"
-hazelcast = "5.1.3"
+hazelcast = "5.3.2"
 mongodb = "4.10.2"
+spring = "6.0.11"
 spring-boot="3.1.2"
-spring-cloud = "2022.0.4"
-projectreactor = "2022.0.9"
+spring-cloud = "4.0.4"
+projectreactor = "3.5.9"
 flapdoodle = "4.8.0"
 jersey-client = "3.1.3"
 
@@ -19,31 +21,58 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 
 [libraries]
-kotlin-bom = { group = "org.jetbrains.kotlin", name = "kotlin-bom", version.ref = "kotlin" }
-junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
-jackson-bom = { group = "com.fasterxml.jackson", name = "jackson-bom", version = "2.15.2" }
-cucumber-bom = { group = "io.cucumber", name = "cucumber-bom", version = "7.13.0" }
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
+
+jackson-annotations = { group = "com.fasterxml.jackson.core", name = "jackson-annotations", version.ref = "jackson" }
+jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-databind", version.ref = "jackson" }
+jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin", version.ref = "jackson" }
+
 dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dokka.gradle.plugin", version.ref = "dokka" }
+
 servlet-api = { group = "jakarta.servlet", name = "jakarta.servlet-api", version.ref = "servlet-api" }
 inject-api = { group = "jakarta.inject", name = "jakarta.inject-api", version = "2.0.1" }
 ws-rs-api = { group = "jakarta.ws.rs", name = "jakarta.ws.rs-api", version = "3.1.0" }
 mail-api = { group = "jakarta.mail", name = "jakarta.mail-api", version = "2.1.2" }
 xml-bind-api = { group = "jakarta.xml.bind", name = "jakarta.xml.bind-api", version = "4.0.0" }
 validation-api = { group = "jakarta.validation", name = "jakarta.validation-api", version = "3.0.2" }
+
 swagger-perser = { group = "io.swagger.parser.v3", name = "swagger-parser", version = "2.1.16" }
 swagger-core-jakarta = { group = "io.swagger.core.v3", name = "swagger-core-jakarta", version.ref = "swagger-core" }
 swagger-core-annotations-jakarta = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swagger-core" }
+
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version = "3.1.7" }
 groovy = { group = "org.apache.groovy", name = "groovy", version = "4.0.13" }
-rest-assured = { group = "io.rest-assured", name = "rest-assured", version = "5.3.1" }
 slf4j-api = { group = "org.slf4j", name = "slf4j-api", version = "2.0.7" }
-awaitility = { group = "org.awaitility", name = "awaitility", version = "4.2.0" }
+
 jersey-client = { group = "org.glassfish.jersey.core", name = "jersey-client", version.ref = "jersey-client" }
 hazelcast = { group = "com.hazelcast", name = "hazelcast", version.ref = "hazelcast" }
 mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", version.ref = "mongodb" }
-spring-boot-dependencies = { group = "org.springframework.boot", name = "spring-boot-dependencies", version.ref = "spring-boot" }
-spring-cloud-dependencies = { group = "org.springframework.cloud", name = "spring-cloud-dependencies", version.ref = "spring-cloud" }
-springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.2.0" }
-projectreactor-bom = { group = "io.projectreactor", name = "reactor-bom", version.ref = "projectreactor" }
-flapdoodle-embed-mongo = { group = "de.flapdoodle.embed", name = "de.flapdoodle.embed.mongo", version.ref = "flapdoodle" }
 
+# Below here, should only be used in the modules located under app/spring directory (except test libraries)
+# Spring
+# spring-boot library contains spring-core and spring-context, so we list only difficult things here
+spring-web = { group = "org.springframework", name = "spring-web", version.ref = "spring" }
+
+# Spring Boot
+spring-boot-starter-core = { group = "org.springframework.boot", name = "spring-boot-starter", version.ref = "spring-boot" }
+spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web", version.ref = "spring-boot" }
+spring-boot-starter-aop = { group = "org.springframework.boot", name = "spring-boot-starter-aop", version.ref = "spring-boot" }
+spring-boot-starter-actuator = { group = "org.springframework.boot", name = "spring-boot-starter-actuator", version.ref = "spring-boot" }
+spring-boot-autoconfigure = { group = "org.springframework.boot", name = "spring-boot-autoconfigure", version.ref = "spring-boot" }
+spring-boot-configuration-processor = { group = "org.springframework.boot", name = "spring-boot-configuration-processor", version.ref = "spring-boot" }
+spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring-boot" }
+
+spring-cloud-starter-bootstrap = { group = "org.springframework.cloud", name = "spring-cloud-starter-bootstrap", version.ref = "spring-cloud" }
+spring-cloud-starter-config = { group = "org.springframework.cloud", name = "spring-cloud-starter-config", version.ref = "spring-cloud" }
+
+springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.2.0" }
+
+projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
+
+# test libraries
+# We use BOM only for test libraries if possible
+junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
+cucumber-bom = { group = "io.cucumber", name = "cucumber-bom", version = "7.13.0" }
+flapdoodle-embed-mongo = { group = "de.flapdoodle.embed", name = "de.flapdoodle.embed.mongo", version.ref = "flapdoodle" }
+awaitility = { group = "org.awaitility", name = "awaitility", version = "4.2.0" }
+rest-assured = { group = "io.rest-assured", name = "rest-assured", version = "5.3.1" }
