Adding how to create a stub API

--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -31,5 +31,25 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>oas-stub-example</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <classifier>dist</classifier>
+                    <mainClass>oas.example.ExampleApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
