--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
             <artifactId>oas-stub-spring</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
