--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -23,8 +23,8 @@
     <dependencies>
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-            <artifactId>oas-stub-spring</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <artifactId>oas-stub-starter-web</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
