--- a/app/spring/oas-stub-spring/src/main/resources/bootstrap.yml
+++ b/app/spring/oas-stub-spring/src/main/resources/bootstrap.yml
@@ -1,3 +1,11 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+
+oas:
+  servlet:
+    admin-prefix: /__admin
+
+springdoc:
+  swagger-ui:
+    url: ${oas.servlet.admin-prefix}/openapi.json
