--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-            <artifactId>oas-stub-starter-web</artifactId>
+            <artifactId>oas-stub-spring-boot-starter-web</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
