--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ spring = "6.0.11"
 spring-boot="3.1.3"
 spring-cloud = "4.0.4"
 projectreactor = "3.5.9"
+guice="7.0.0"
+guava="32.1.2-jre"
 flapdoodle = "4.9.2"
 jersey-client = "3.1.3"
 
@@ -81,6 +83,11 @@ spring-cloud-context = { group = "org.springframework.cloud", name = "spring-clo
 springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.2.0" }
 
 projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
+
+guice-core = { group = "com.google.inject", name = "guice", version.ref="guice" }
+guice-servlet = { group = "com.google.inject.extensions", name = "guice-servlet", version.ref="guice" }
+
+guava = { group = "com.google.guava", name = "guava", version.ref="guava"}
 
 # test libraries
 # We use BOM only for test libraries if possible
