--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,10 +12,11 @@ spring = "6.0.11"
 spring-boot="3.1.3"
 spring-cloud = "4.0.4"
 projectreactor = "3.5.9"
-guice="7.0.0"
-guava="32.1.2-jre"
+guice = "7.0.0"
+jetty = "12.0.1"
+guava = "32.1.2-jre"
 flapdoodle = "4.9.2"
-jersey-client = "3.1.3"
+jersey = "3.1.3"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -53,7 +54,11 @@ groovy-xml = { group = "org.apache.groovy", name = "groovy-xml", version.ref = "
 groovy-json = { group = "org.apache.groovy", name = "groovy-json", version.ref = "groovy" }
 slf4j-api = { group = "org.slf4j", name = "slf4j-api", version = "2.0.7" }
 
-jersey-client = { group = "org.glassfish.jersey.core", name = "jersey-client", version.ref = "jersey-client" }
+jersey-client = { group = "org.glassfish.jersey.core", name = "jersey-client", version.ref = "jersey" }
+jersey-server = { group = "org.glassfish.jersey.core", name = "jersey-server", version.ref = "jersey" }
+jersey-container-servlet = { group = "org.glassfish.jersey.containers", name = "jersey-container-servlet", version.ref = "jersey"}
+jersey-inject-hk2 = { group = "org.glassfish.jersey.inject", name = "jersey-hk2", version.ref = "jersey" }
+
 aspectj = { group  = "org.aspectj", name = "aspectjweaver", version = "1.9.20" }
 
 hazelcast = { group = "com.hazelcast", name = "hazelcast", version.ref = "hazelcast" }
@@ -87,7 +92,8 @@ projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-cor
 guice-core = { group = "com.google.inject", name = "guice", version.ref="guice" }
 guice-servlet = { group = "com.google.inject.extensions", name = "guice-servlet", version.ref="guice" }
 guice-bridge = { group = "org.glassfish.hk2", name = "guice-bridge", version = "3.0.4" }
-jetty-server = { group = "org.eclipse.jetty", name = "jetty-server", version = "12.0.1" }
+jetty-server = { group = "org.eclipse.jetty", name = "jetty-server", version.ref = "jetty" }
+jetty-ee10-webapp = { group = "org.eclipse.jetty.ee10", name = "jetty-ee10-webapp", version.ref = "jetty" }
 
 guava = { group = "com.google.guava", name = "guava", version.ref="guava"}
 
