--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ jetty = "12.0.1"
 guava = "32.1.2-jre"
 flapdoodle = "4.9.2"
 jersey = "3.1.3"
+aspectj = "1.9.20.1"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -53,6 +54,7 @@ groovy-core = { group = "org.apache.groovy", name = "groovy", version.ref = "gro
 groovy-xml = { group = "org.apache.groovy", name = "groovy-xml", version.ref = "groovy" }
 groovy-json = { group = "org.apache.groovy", name = "groovy-json", version.ref = "groovy" }
 slf4j-api = { group = "org.slf4j", name = "slf4j-api", version = "2.0.7" }
+logback-classic = { group = "ch.qos.logback", name = "logback-classic", version = "1.4.11" }
 
 jersey-client = { group = "org.glassfish.jersey.core", name = "jersey-client", version.ref = "jersey" }
 jersey-server = { group = "org.glassfish.jersey.core", name = "jersey-server", version.ref = "jersey" }
@@ -61,7 +63,8 @@ jersey-media-json-jackson = { group = "org.glassfish.jersey.media", name = "jers
 
 jersey-inject-hk2 = { group = "org.glassfish.jersey.inject", name = "jersey-hk2", version.ref = "jersey" }
 
-aspectj = { group  = "org.aspectj", name = "aspectjweaver", version = "1.9.20" }
+aspectjweaver = { group  = "org.aspectj", name = "aspectjweaver", version.ref = "aspectj" }
+aspectjrt = { group  = "org.aspectj", name = "aspectjrt", version.ref = "aspectj" }
 
 hazelcast = { group = "com.hazelcast", name = "hazelcast", version.ref = "hazelcast" }
 mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", version.ref = "mongodb" }
