Adding oas stub server test module

--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -30,6 +30,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-contract-wiremock</artifactId>
+            <version>4.0.4</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>oas-stub-example</finalName>
