--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.7.0
       - name: Build
-        run: ./gradlew build
+        run: ./gradlew clean build
       - name: Publish to maven local
         run: ./gradlew publishToMavenLocal
       - name: Build example
