Adding document of Guice server module. Beautifying things I've noticed during document writing.

--- a/app/spring/oas-stub-spring-stub-server/src/test/resources/application.yaml
+++ b/app/spring/oas-stub-spring-stub-server/src/test/resources/application.yaml
@@ -1,6 +1,8 @@
 oas:
   stub:
     test:
+      server:
+        reset-configuration-after-each-test: true
       definitions:
         petstore:
           specification: 'classpath:/schema/petstore.yaml'
