--- a/examples/petstore-broker/pom.xml
+++ b/examples/petstore-broker/pom.xml
@@ -18,8 +18,10 @@
         <maven.compiler.release>${java.release}</maven.compiler.release>
         <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <jetty.version>12.0.1</jetty.version>
         <cucumber.version>7.13.0</cucumber.version>
         <rest-assured.version>5.3.1</rest-assured.version>
+        <oas.stub.version>1.2.0-SNAPSHOT</oas.stub.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -59,7 +61,13 @@
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
             <artifactId>oas-stub-spring-boot-starter-test</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>${oas.stub.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.ktakashi.oas.stub.spring</groupId>
+            <artifactId>oas-stub-spring-stub-server</artifactId>
+            <version>${oas.stub.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
