--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.ktakashi.oas.example</groupId>
+    <groupId>io.github.ktakashi.oas.example.spring</groupId>
     <artifactId>example-spring-app</artifactId>
     <version>0.0.1</version>
 
@@ -24,16 +24,11 @@
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
             <artifactId>oas-stub-spring-boot-starter-web</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-contract-wiremock</artifactId>
-            <version>4.0.4</version>
         </dependency>
     </dependencies>
     <build>
@@ -51,7 +46,7 @@
                 </executions>
                 <configuration>
                     <classifier>dist</classifier>
-                    <mainClass>oas.example.ExampleApplication</mainClass>
+                    <mainClass>oas.example.spring.ExampleApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
