--- a/lib/oas-stub-engine/src/test/resources/schema/validation_3.0.3.yaml
+++ b/lib/oas-stub-engine/src/test/resources/schema/validation_3.0.3.yaml
@@ -43,8 +43,8 @@ components:
           $ref: "#/components/schemas/Array"
     Array:
       type: array
-      maximum: 2
-      minimum: 1
+      maxItems: 2
+      minItems: 1
       items:
         anyOf:
           - type: string
