Fixing parameter validation on OAS 3.1.x (seems it won't be propagated to operation...) Handling example in a better way to avoid runtime error.

--- a/examples/petstore-broker/pom.xml
+++ b/examples/petstore-broker/pom.xml
@@ -162,7 +162,7 @@
                 </executions>
                 <configuration>
                     <classifier>dist</classifier>
-                    <mainClass>oas.example.ExampleApplication</mainClass>
+                    <mainClass>oas.example.petstore.broker.PetstoreBrokerApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
