--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,16 +8,17 @@ junit = "5.9.3"
 hazelcast = "5.3.2"
 mongodb = "4.10.2"
 groovy = "4.0.15"
-spring = "6.0.11"
-spring-boot="3.2.0"
-spring-cloud = "4.1.0"
-projectreactor = "3.6.0"
+spring = "6.1.6"
+spring-boot="3.2.5"
+spring-cloud = "4.1.2"
+projectreactor = "3.6.5"
 guice = "7.0.0"
 jetty = "12.0.1"
 guava = "32.1.2-jre"
 flapdoodle = "4.9.2"
 jersey = "3.1.3"
 aspectj = "1.9.20.1"
+netty = "4.1.109.Final"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -36,6 +37,8 @@ jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackso
 jackson-module-jakarta-xmlbind-annotations = { group = "com.fasterxml.jackson.module", name = "jackson-module-jakarta-xmlbind-annotations", version.ref = "jackson"}
 
 dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dokka.gradle.plugin", version.ref = "dokka" }
+
+netty-all = { group = "io.netty", name = "netty-all", version.ref = "netty" }
 
 servlet-api = { group = "jakarta.servlet", name = "jakarta.servlet-api", version.ref = "servlet-api" }
 inject-api = { group = "jakarta.inject", name = "jakarta.inject-api", version = "2.0.1" }
