--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ guava = "32.1.2-jre"
 flapdoodle = "4.9.2"
 jersey = "3.1.3"
 aspectj = "1.9.20.1"
-netty = "4.1.109.Final"
+reactor-netty = "1.1.18"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -39,7 +39,7 @@ jackson-module-jakarta-xmlbind-annotations = { group = "com.fasterxml.jackson.mo
 
 dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dokka.gradle.plugin", version.ref = "dokka" }
 
-netty-all = { group = "io.netty", name = "netty-all", version.ref = "netty" }
+reactor-netty = { group = "io.projectreactor.netty", name = "reactor-netty", version.ref = "reactor-netty" }
 
 servlet-api = { group = "jakarta.servlet", name = "jakarta.servlet-api", version.ref = "servlet-api" }
 inject-api = { group = "jakarta.inject", name = "jakarta.inject-api", version = "2.0.1" }
@@ -80,11 +80,13 @@ mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", ver
 spring-core = { group = "org.springframework", name = "spring-core", version.ref = "spring" }
 spring-web = { group = "org.springframework", name = "spring-web", version.ref = "spring" }
 spring-test = { group = "org.springframework", name = "spring-test", version.ref = "spring" }
+spring-webflux = { group = "org.springframework", name = "spring-webflux", version.ref = "spring" }
 
 # Spring Boot
 spring-boot-core = { group = "org.springframework.boot", name = "spring-boot", version.ref = "spring-boot" }
 spring-boot-starter-core = { group = "org.springframework.boot", name = "spring-boot-starter", version.ref = "spring-boot" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web", version.ref = "spring-boot" }
+spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux", version.ref = "spring-boot" }
 spring-boot-starter-aop = { group = "org.springframework.boot", name = "spring-boot-starter-aop", version.ref = "spring-boot" }
 spring-boot-starter-actuator = { group = "org.springframework.boot", name = "spring-boot-starter-actuator", version.ref = "spring-boot" }
 spring-boot-starter-jersey = { group = "org.springframework.boot", name = "spring-boot-starter-jersey", version.ref = "spring-boot" }
