--- a/app/spring/oas-stub-spring-boot-starter-test-reactive/src/test/resources/application.yaml
+++ b/app/spring/oas-stub-spring-boot-starter-test-reactive/src/test/resources/application.yaml
@@ -1,18 +1,16 @@
-oas:
-  stub:
-    test:
-      server:
-        reset-configuration-after-each-test: true
-      definitions:
-        petstore:
-          specification: 'classpath:/schema/petstore.yaml'
-          configurations:
-            '[/v1/pets/{id}]':
-              data:
-                '[/v1/pets/1]':
-                  status: 200
-                  response: 'classpath:/json/pet1.json'
-                default:
-                  status: 404
-                  response: |
-                    { "status": 404, "message": "No pet found" }
+oas.stub.test:
+  server:
+    reset-configuration-after-each-test: true
+  definitions:
+    petstore:
+      specification: 'classpath:/schema/petstore.yaml'
+      configurations:
+        '[/v1/pets/{id}]':
+          data:
+            '[/v1/pets/1]':
+              status: 200
+              response: 'classpath:/json/pet1.json'
+            default:
+              status: 404
+              response: |
+                { "status": 404, "message": "No pet found" }
