--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,7 @@ jobs:
         run: ./gradlew publishToMavenLocal
       - name: Build example
         run: mvn package
-        working-directory: examples/spring
-      - name: Run example app test script
-        run: ./scripts/example-app-test.sh
-        working-directory: examples/spring
-      - name: Starter test example
-        run: mvn package
-        working-directory: examples/petstore-broker
+        working-directory: examples
   snapshot-publish:
     needs: [ build ]
     if: ${{ github.ref == 'refs/heads/main' }}
