--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check version
         run: |
-          currentVersion=`cat gradle.properties | grep 'version' | sed -E 's/version=([0-9.]+)-SNAPSHOT/\1/'`
+          currentVersion=`cat gradle.properties | grep 'version' | sed -E 's/version=([0-9.-]+)-SNAPSHOT/\1/'`
           if [ ! "$currentVersion" = "${{ github.ref_name }}" ]; then
             echo "Version mismatch: expected '$currentVersion' but got '${{ github.ref_name }}'"
             exit 1
