--- a/examples/guice/pom.xml
+++ b/examples/guice/pom.xml
@@ -2,23 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>io.github.ktakashi.oas.example</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ktakashi.oas.example.guice</groupId>
     <artifactId>example-guice-app</artifactId>
-    <version>0.0.1</version>
-
-    <properties>
-        <java.release>17</java.release>
-        <maven.compiler.release>${java.release}</maven.compiler.release>
-        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.guice</groupId>
             <artifactId>oas-stub-guice-module</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
