--- a/examples/petstore-broker/pom.xml
+++ b/examples/petstore-broker/pom.xml
@@ -3,51 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
+        <groupId>io.github.ktakashi.oas.example</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.ktakashi.oas.example</groupId>
     <artifactId>petstore-broker</artifactId>
-    <version>0.0.1</version>
-
-    <properties>
-        <java.release>17</java.release>
-        <maven.compiler.release>${java.release}</maven.compiler.release>
-        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <jetty.version>12.0.1</jetty.version>
-        <cucumber.version>7.13.0</cucumber.version>
-        <rest-assured.version>5.3.1</rest-assured.version>
-        <oas.stub.version>1.3.0-SNAPSHOT</oas.stub.version>
-    </properties>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.github.ktakashi.oas.stub</groupId>
-                <artifactId>oas-stub-bom</artifactId>
-                <version>${oas.stub.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>io.cucumber</groupId>
-                <artifactId>cucumber-bom</artifactId>
-                <version>${cucumber.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>io.rest-assured</groupId>
-                <artifactId>rest-assured-bom</artifactId>
-                <version>${rest-assured.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
