--- a/examples/spring/pom.xml
+++ b/examples/spring/pom.xml
@@ -3,28 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
+        <groupId>io.github.ktakashi.oas.example</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ktakashi.oas.example.spring</groupId>
     <artifactId>example-spring-app</artifactId>
-    <version>0.0.1</version>
-
-    <properties>
-        <java.release>17</java.release>
-        <maven.compiler.release>${java.release}</maven.compiler.release>
-        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
             <artifactId>oas-stub-spring-boot-starter-web</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
