--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ flapdoodle = "4.9.2"
 jersey = "3.1.3"
 aspectj = "1.9.20.1"
 reactor-netty = "1.1.18"
+bouncy-castle = "1.78.1"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -104,13 +105,16 @@ springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springd
 
 projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
 
-guice-core = { group = "com.google.inject", name = "guice", version.ref="guice" }
-guice-servlet = { group = "com.google.inject.extensions", name = "guice-servlet", version.ref="guice" }
+guice-core = { group = "com.google.inject", name = "guice", version.ref = "guice" }
+guice-servlet = { group = "com.google.inject.extensions", name = "guice-servlet", version.ref = "guice" }
 guice-bridge = { group = "org.glassfish.hk2", name = "guice-bridge", version = "3.0.4" }
 jetty-server = { group = "org.eclipse.jetty", name = "jetty-server", version.ref = "jetty" }
 jetty-ee10-webapp = { group = "org.eclipse.jetty.ee10", name = "jetty-ee10-webapp", version.ref = "jetty" }
 
-guava = { group = "com.google.guava", name = "guava", version.ref="guava"}
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava"}
+
+bcprov-jdk18on = { group = "org.bouncycastle", name = "bcprov-jdk18on", version.ref = "bouncy-castle" }
+bcpkix-jdk18on = { group = "org.bouncycastle", name = "bcpkix-jdk18on", version.ref = "bouncy-castle" }
 
 # test libraries
 # We use BOM only for test libraries if possible
